@@ -23,3 +23,6 @@
 - Addition of some strings for i18n (https://github.com/zdohnal/system-config-printer/pull/81)
 - Update .po and .pot files
 - added GenericName and X-GNOME-FullName to system-config-printer.desktop.in (https://github.com/zdohnal/system-config-printer/issues/20)
+- removed some deprecated parts of gui
+- updated translations by files from Zanata
+- s-c-p doesn't react on ALREADY_ENABLED exception from firewalld
